--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,1 +1,14 @@
-.about_me {}
+.about_wrapper {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.about_wrapper .h6 {
+    position: relative;
+    z-index: 100;
+}
+.about_wrapper div{
+    position: relative;
+}
