--- a/src/Components/HeroSection/hero.css
+++ b/src/Components/HeroSection/hero.css
@@ -1,21 +1,34 @@
-
 .hero_content {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding-block: 15rem;
 }
 
 .hero_name {
     letter-spacing: 5px;
     font-size: 1.5rem;
     margin-bottom: 2rem;
+    z-index: 151;
+}
+
+.hero_content .hero_name {
+    margin-top: -8rem;
 }
 
 #hero_desc {
+    /* width: 100%; */
+    flex-wrap: wrap;
+    display: flex;
+    gap: 2rem;
     font-size: var(--hero_name);
     font-weight: 900;
     letter-spacing: 5px;
-    white-space: nowrap;
+    margin-left: -0.065em;
+
+    /* line-height:90px; */
+    /* white-space: nowrap; */
     text-transform: uppercase;
 }
 
@@ -24,12 +37,25 @@
     /* font-weight: 900; */
 }
 
-.social {
-    display: flex;
-    margin-left: -40px;
-    margin-bottom: -50px;
+.fractions {
+    color: rgb(255, 255, 255);
+    clip-path: var(--clip);
+    z-index: 100;
 }
 
-.social img {
-    color: white;
+.desc_wrapper{
+    position: relative;
 }
+
+.wireframe {
+    position: relative;
+    color: #ffffff00 !important;
+    -webkit-text-stroke: 1px rgb(255, 255, 255);
+    z-index: 200 !important;
+}
+
+.absolute{
+    position: absolute !important;
+    top: 0 !important;
+}
+
