--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,18 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* @font-face {
+  font-family: 'Josefin Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/josefinsans/v32/Qw3aZQNVED7rKGKxtqIqX5EUDXx4.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+} */
+
 @font-face {
-  font-family: "Josefin Sans";
-  src:
-    local("JosefinSans"),
-    url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
+  font-family: 'Josefin Sans';
+  src: url('./assets/font/JosefinSans.ttf') format('truetype');
 }
 
 @font-face {
@@ -30,12 +37,16 @@
   font-family: Josefin Sans;
 
   color: rgba(255, 255, 255, 0.87);
-  --blob:hsl(0, 100%, 51%);
+  --blob: hsl(0, 100%, 51%);
   --bg_main: hsl(140, 75%, 37%);
+  --border_bottom: hsla(0, 0%, 0%, 0.2);
 
   --padding: 3rem;
+  --padding_bottom: 4rem;
   --base_font_size: 1rem;
   --hero_name: 5rem;
+  --ml: -0.065em;
+  --gutter: 10rem;
 
 
   /* font-synthesis: none;
@@ -50,8 +61,7 @@ html,
 body,
 #root {
   margin: 0;
-  height: 10
-  0%;
+  height: 10 0%;
 }
 
 
@@ -61,8 +71,13 @@ body,
   box-sizing: border-box;
 }
 
-*:first-letter {
-  margin-left: -0.065em;
+/* *:first-letter, */
+label {
+  /* margin-left: -0.065em; */
+}
+
+label::after {
+  /* margin-left: 0.065em; */
 }
 
 label,
