--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ section {
   padding-inline: 16rem 5rem;
   margin-bottom: 1px;
   /* padding-block: 15rem; */
+  scroll-margin-top: -3rem;
 }
 
 .title {
@@ -72,11 +73,19 @@ section {
 }
 
 .h6 {
-  font-size: 2.8rem;
+  font-size: 2.5rem;
   font-weight: 900;
   line-height: 4rem;
   letter-spacing: 0.15em;
   color: white;
+}
+
+#fontSizeTester {
+  position: absolute;
+  visibility: hidden;
+  height: auto;
+  width: auto;
+  white-space: nowrap;
 }
 
 .h5 {
@@ -289,7 +298,7 @@ html.lenis {
   }
 
   :root {
-    --gutter: 8rem !important;
+    --gutter: 12rem !important;
     --padding: 3rem 2rem;
     --padding_bottom: 4rem !important;
     --hero_name: 3rem !important;
@@ -331,8 +340,9 @@ html.lenis {
   }
 
   .h6 {
-    font-size: 1.7rem;
-    line-height: 2rem;
+    font-size: 2rem;
+    line-height: 2.5rem;
+    /* text-wrap: balance !important; */
   }
 
   .skills {
