--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -2,26 +2,29 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 2000;
+}
+
+#header {
     padding: var(--padding);
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    z-index: 2000;
     height: 100vh;
 }
 
 #logo {
     font-size: 1.5em;
     font-weight: 900;
+    z-index: 2002;
     cursor: pointer;
 }
 
-#navbar {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-    align-items: flex-start;
+#navbar{
+    display: grid;
+    gap: 4rem;
+    justify-items:flex-start;
 }
 
 .nav_items {
@@ -38,4 +41,135 @@ header {
     padding-right: 3rem;
     padding-block: 2px;
     cursor: pointer;
+}
+
+
+#header_mobile {
+    display: flex;
+    position: fixed;
+    background: var(--border_bottom);
+    width: 100%;
+    height: 5rem !important;
+    padding: 2rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+#backdrop {
+    position: fixed;
+    top: 5rem;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    background-color: rgb(20 20 20 / 84%);
+    backdrop-filter: blur(20px);
+    opacity: 0;
+    transition: 0.5s;
+    z-index: -1;
+    pointer-events: none;
+}
+
+#backdrop.active {
+    display: block !important;
+    opacity: 1 !important;
+    z-index: 100 !important;
+    pointer-events: all !important;
+}
+
+.hamberger {
+    position: relative;
+    width: 15px;
+    height: 15px;
+    z-index: 2002;
+    margin: 2rem 0 2rem 3rem;
+    translate: calc(-3rem + -2rem + -15px) 0;
+    transition: 1s;
+    
+}
+
+.hamberger span {
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    opacity: 1;
+    transform-origin: center;
+    top: 0;
+    translate: 0 -50%;
+    transition: 1s;
+}
+
+.hamberger span:nth-child(2) {
+    top: 50%;
+}
+
+.hamberger span:nth-child(3) {
+    top: 100%;
+}
+
+.hamberger.active {
+    justify-content: center !important;
+    rotate: -180deg;
+    translate: 0 0;
+    width: 15px;
+    height: 15px;
+}
+
+.hamberger.active span:nth-child(2) {
+    opacity: 0;
+}
+
+.hamberger.active span:nth-child(1) {
+    top: 50%;
+    rotate: 45deg;
+}
+
+.hamberger.active span:nth-child(3) {
+    top: 50%;
+    rotate: -45deg;
+}
+
+.drawer {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 0%;
+    background: hsl(0 0% 6% / 1);
+    /* padding: 5rem 0 0 0; */
+    z-index: 2001;
+    transition: 1s;
+}
+.drawer .items{
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+    border-top: 1px solid var(--border_bottom);
+}
+.drawer .items a{
+    padding-block: 2rem;
+    padding-left: 3rem;
+}
+.drawer.active{
+    width: 75%;
+}
+
+
+@media (min-width: 481px) {
+    #header_mobile {
+        display: none !important;
+    }
+}
+
+
+@media (max-width: 480px) {
+    #header {
+        display: none !important;
+    }
+
+    #logo {
+        font-size: 1.6rem !important;
+    }
 }
